feat: changes for create rpc
